# RecruitGenie

./: .gitignore  LICENSE  README.md  mongodb_handler.py  postgres_handler.py  pyproject.toml  requirements.txt  schema.sql  test_connections.py
backend/: db.py  main.py  recruitgenie_app.py  requirements.txt  utils.py
backend/agents/: __init__.py  data_agent.py  db_agent.py  interview_agent.py  resume_agent.py  scoring_agent.py
backend/api/: __init__.py  endpoints.py
backend/assets/: candidate_data.csv  job_description.txt
backend/assets/resumes/: akashhhh.docx  alice.txt  bob.txt
backend/config/: skills_config.py
backend/models/: job.py
backend/services/: agent_manager.py
backend/upload_resume/: page.tsx
config/: settings.py
recruitgenie-frontend/: package-lock.json  package.json
recruitgenie-frontend/app/: page.tsx  pages.tsx
recruitgenie-frontend/app/analytics/: page.tsx
recruitgenie-frontend/app/candidates/: page.tsx
recruitgenie-frontend/app/components/: ErrorBoundary.tsx
recruitgenie-frontend/app/upload/: page.tsx
